simple AJAXPost request now available

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
             <img id = "captcha-image" src = "./images/BobCat.gif" alt = "Meow">
         </div>
 
-        <button id="poke">Submit Captcha </button>
+        <button id="submit-btn">Submit Captcha </button>
 
     </body>
 </html>
