records in captcha image. adds click recording

--- a/public/index.html
+++ b/public/index.html
@@ -14,11 +14,14 @@
         </div>
 
         <button id="submit-btn">Submit Captcha </button>
+        <button id="get-captcha">Get New Captcha </button>
 
     <!-- Record Mouse Movements -->
         <div class="cursor"></div>
+    <!--
         <button class="p" onclick="recorder.playback()">stop & play</button>
-        <button class="r" onclick="recorder.record()">record</button>
+        <button class="r" onclick="recorder.record()">record</button> 
+    -->
 
         <div class="obstacle"></div>
     <!-- ---------------------- -->
