add instructions and update UI

--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,20 @@
         <div class = "banner">
             <h1>SSCaptcha</h1>
         </div>
+        <div class = "instructions"> 
+            <div class = "textbox">
+                <h4>Instructions</h4>
+                <p> 1. Move cursor clockwise around the red dot once <br>
+                    2. Click both cat ears
+                </p>
+            </div>
+        </div>
+        <button class = "blue-button" id="get-captcha">Get New Captcha </button>
         <div class = "captcha">
             <img id = "captcha-image" src = "./images/BobCat.gif" alt = "Meow">
         </div>
 
-        <button id="submit-btn">Submit Captcha </button>
-        <button id="get-captcha">Get New Captcha </button>
+        <button class = "blue-button" id="submit-btn">Submit Captcha </button>
 
     <!-- Record Mouse Movements -->
         <div class="cursor"></div>
