updating with solution...

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
             <h1>SSCaptcha</h1>
         </div>
         <div class = "instructions"> 
-            <div class = "textbox">
+            <div class = "textbox" id="instruction-textbox">
                 <h4>Instructions</h4>
                 <p> 1. Move cursor clockwise around the red dot once <br>
                     2. Click both cat ears
