--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
         </div>
         <div class = "instructions"> 
             <div class = "textbox" id="instruction-textbox">
-                <h4>Instructions</h4>
+                <b>Instructions</b>
                 <p> 1. Move cursor clockwise around the red dot once <br>
                     2. Click both cat ears
                 </p>
@@ -134,6 +134,14 @@
                 &nbsp;<input type="radio" name="text-SS" value="text-captcha"> text-captcha &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <input type="radio" name="text-SS" value="SSCaptcha"> SSCaptcha <br><br>
+
+                <b>10. Which Captcha do you prefer? </b><br>
+                &nbsp;&nbsp;&nbsp;&nbsp;
+                <img class = "survey-image" src = "./images/image-captcha.jpg" alt = "text-based captcha">
+                <img class = "survey-image" src = "./images/BobCat.gif" alt = "SSCaptcha"> <br>
+                &nbsp;<input type="radio" name="image-SS" value="text-captcha"> image-captcha &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <input type="radio" name="image-SS" value="SSCaptcha"> SSCaptcha <br><br>
 
                 </p>
                 <button class = "blue-button" id = "survey-submit-btn">Submit</button>
