rip bob the cat

--- a/public/index.html
+++ b/public/index.html
@@ -16,16 +16,16 @@
         </div>
         <div class = "instructions"> 
             <div class = "textbox" id="instruction-textbox">
-                <b>Instructions</b>
+               <!-- <b>Instructions</b>
                 <p> 1. Move cursor clockwise around the red dot once <br>
                     2. Click both cat ears
-                </p>
+                </p>-->
             </div>
         </div>
         <button class = "blue-button" id="get-captcha">Get New Captcha </button>
         <button class = "blue-button" id = "survey-btn">Survey</button>
         <div class = "captcha">
-            <img id = "captcha-image" src = "./images/BobCat.gif" alt = "Meow">
+            <img id = "captcha-image">
         </div>
 
         <button class = "blue-button" id="submit-btn">Submit Captcha </button>
