--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
         <button class="r" onclick="recorder.record()">record</button> 
     -->
 
-        <div class="obstacle"></div>
+        <!-- <div class="obstacle"></div> -->
     <!-- ---------------------- -->
     
     <!--------- Survey --------->
