improve survey UI

--- a/public/index.html
+++ b/public/index.html
@@ -41,11 +41,11 @@
     <!-- ---------------------- -->
      <!--------- Survey--------->
     <div id = "modal">
-        <div id = "modal-content">
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdLJZATh27WHdjP_Pmh1L8fPYg_PJIyR8tM_61g8UqxqV75Aw/viewform?embedded=true" width="640" height="2650" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
-            <button id='survey-close-btn' class = "blue-button">Close</button>
-        </div>
-      </div> 
+       <!-- <div id = "modal-content">-->
+        <iframe id="modal-content" src="https://docs.google.com/forms/d/e/1FAIpQLSdLJZATh27WHdjP_Pmh1L8fPYg_PJIyR8tM_61g8UqxqV75Aw/viewform?embedded=true" width="800" height="3000" frameborder="0" marginheight="0" marginwidth="0" onsubmit="window.parent.parent.scrollTo(0, 0); return true">Loading... </iframe>
+           <!-- <button id='survey-close-btn' class = "blue-button">Close</button> -->
+        
+    </div> 
     <!-- ---------------------- -->
     </body>
 </html>
