--- a/public/index.html
+++ b/public/index.html
@@ -19,10 +19,13 @@
         </div>
         <button class = "blue-button" id="get-captcha">Get New Captcha </button>
         <button class = "blue-button" id = "survey-btn">Survey</button>
-        <div class = "captcha">
-            <img id = "captcha-image">
+        <button class = "blue-button" id = "about-btn">About</button>
+        <div id = "captcha-wrapper">
+            <div class = "captcha" id = "captcha-container">
+                    <img id = "captcha-image">
+            </div>
+            <button class = "blue-button" id="submit-btn">Submit Captcha </button>
         </div>
-        <button class = "blue-button" id="submit-btn">Submit Captcha </button>
 
     <!-- Record Mouse Movements -->
         <div class="cursor"></div>
@@ -35,6 +38,35 @@
             <button id='survey-close-btn' class = "blue-button">Close</button>
         </div> 
     <!-- ---------------------- -->
+    <div id = "about">
+        <p>
+            Classical captchas based solely on recognizing distorted text have become weak due to the 
+            advances in Optical Character Recognition, machine learning, and artificial intelligence. 
+            Currently industry practice is moving towards intrusively tracking the users’ data to 
+            determine if they’re behaving as expected.                 
+        </p>
+        <p> S.S.CAPTCHA (Simon Says CAPTCHA)  involves the interpretation of context-based 
+            instructions for users to perform, requiring them to make specific actions involving 
+            mouse movements. 
+            This combines three areas that are problematic for bots to perform correctly: 
+            image recognition, interpretation of context-based commands, and mimicking user action. 
+            The combination of these increases the difficulty of bots to correctly solve our CAPTCHA, 
+            while not significantly increasing the difficulty for human users.
+        </p>
+        <p>
+            SSCAPTCHA aims to show the feasibility of secure bot detection systems in the current age, 
+            while maintaining the classic challenge/response format. Along with not intrusively 
+            tracking user’s data, we worked to not add extra noise to images as well as decrease 
+            usability by adding an overwhelming amount of images to solve.
+
+            By using biometric analysis of mouse movements over the CAPTCHA image, along with 
+            context-based instruction, and image recognition, SSCAPTCHA combines three areas that are 
+            problematic for bots to solve,  in order to prevent them from accessing resources while
+            maintaining usability for humans.
+                
+        </p>
+    </div> 
+
     </body>
 </html>
 
