--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,6 @@
         </div>
         <button class = "blue-button" id="get-captcha">Get New Captcha </button>
         <button class = "blue-button" id = "survey-btn">Survey</button>
-        <button class = "blue-button" id = "about-btn">About</button>
         <div id = "captcha-wrapper">
             <div class = "captcha" id = "captcha-container">
                     <img id = "captcha-image">
@@ -37,7 +36,7 @@
             <iframe id="modal-content" src="https://docs.google.com/forms/d/e/1FAIpQLSdLJZATh27WHdjP_Pmh1L8fPYg_PJIyR8tM_61g8UqxqV75Aw/viewform?embedded=true" width="800" height="3000" frameborder="0" marginheight="0" marginwidth="0">Loading... </iframe>
             <button id='survey-close-btn' class = "blue-button">Close</button>
         </div> 
-    <!-- ---------------------- -->
+    <!-- ---------------------- 
     <div id = "about">
         <p>
             Classical captchas based solely on recognizing distorted text have become weak due to the 
@@ -65,7 +64,7 @@
             maintaining usability for humans.
                 
         </p>
-    </div> 
+    </div> -->
 
     </body>
 </html>
